force-app/main/default/objects/Case/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Advice</fullName>
            </value>
            <value>
                <fullName>Shift Timing</fullName>
            </value>
            <value>
                <fullName>Appointment Query</fullName>
            </value>
            <value>
                <fullName>Billing Query</fullName>
            </value>
            <value>
                <fullName>Salary Query</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>