force-app/main/default/objects/Case/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <label>Need Response Within</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 2 Weeks</fullName>
            </value>
            <value>
                <fullName>Within a month</fullName>
            </value>
            <value>
                <fullName>Within 45 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>