force-app/main/default/objects/Case/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>CASE( R__c , &quot;Within 2 Weeks&quot;,  TODAY() +14, &quot;Within a month&quot;, TODAY() +30,&quot;Within 45 Days&quot;,TODAY() +45,TODAY() +60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <type>Date</type>
</CustomField>