force-app/main/default/objects/Case/recordTypes/Doctor_s_Query.recordType-meta.xml
<RecordType>
    <fullName>Doctor_s_Query</fullName>
    <active>true</active>
    <businessProcess>Doctor Query</businessProcess>
    <description>For handling Doctor&apos;s queries with the hospital management.</description>
    <label>Doctor&apos;s Query</label>
</RecordType>