force-app/main/default/objects/Case/recordTypes/Patient_Query.recordType-meta.xml
<RecordType>
    <fullName>Patient_Query</fullName>
    <active>true</active>
    <businessProcess>Patient Query</businessProcess>
    <description>For handling Patient&apos;s queries with the hospital service.</description>
    <label>Patient Query</label>
</RecordType>