force-app/main/default/objects/Case/listViews/Billing_Salary_Support_Case.listView-meta.xml
<ListView>
    <fullName>Billing_Salary_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing | Salary Support</label>
    <queue>Billing_Salary_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>