force-app/main/default/objects/Case/listViews/Doctor_Support_Case.listView-meta.xml
<ListView>
    <fullName>Doctor_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Doctor Support</label>
    <queue>Doctor_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>