force-app/main/default/objects/Case/listViews/Patient_Support_Case.listView-meta.xml
<ListView>
    <fullName>Patient_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Patient Support</label>
    <queue>Patient_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>